--- a/Bundesliga.html
+++ b/Bundesliga.html
@@ -80,17 +80,17 @@
         <h3>Bayern Múnich</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Bayern Munich/HOME.jpg" alt="Camiseta Bayern Múnich">
+                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/HOME.jpg" alt="Camiseta Bayern Múnich">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Bayern Munich/AWAY (16).jpg" alt="Camiseta Bayern Múnich">
+                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/AWAY (16).jpg" alt="Camiseta Bayern Múnich">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Bayern Munich/THIRD (10).jpg" alt="Camiseta Bayern Múnich">
+                <img src="Imagenes/BUNDESLIGA/BAYERN MUNICH/THIRD (10).jpg" alt="Camiseta Bayern Múnich">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -107,12 +107,12 @@
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Leverkusen/AWAY (21).jpg" alt="Camiseta Bayer Leverkusen">
+                <img src="Imagenes/BUNDESLIGA/LEVERKUSEN/AWAY (21).jpg" alt="Camiseta Bayer Leverkusen">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Leverkusen/THIRD.jpg" alt="Camiseta Bayer Leverkusen">
+                <img src="Imagenes/BUNDESLIGA/LEVERKUSEN/THIRD.jpg" alt="Camiseta Bayer Leverkusen">
                 <h4>Camiseta Alternativa</h4>
                 <p>23€</p>
             </div>
@@ -124,17 +124,17 @@
         <h3>Borussia Dortmund</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Borussia Dortmund/HOME.jpg" alt="Camiseta Borussia Dortmund">
+                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/HOME.jpg" alt="Camiseta Borussia Dortmund">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Borussia Dortmund/AWAY (17).jpg" alt="Camiseta Borussia Dortmund">
+                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/AWAY (17).jpg" alt="Camiseta Borussia Dortmund">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Borussia Dortmund/THIRD (11).jpg" alt="Camiseta Borussia Dortmund">
+                <img src="Imagenes/BUNDESLIGA/BORUSSIA DORTMUND/THIRD (11).jpg" alt="Camiseta Borussia Dortmund">
                 <h4>Camiseta Alternativa</h4>
                 <p>23€</p>
             </div>
@@ -146,12 +146,12 @@
         <h3>Eintracht Frankfurt</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Frankfurt/HOME.jpg" alt="Camiseta Eintracht Frankfurt">
+                <img src="Imagenes/BUNDESLIGA/FRANKFURT/HOME.jpg" alt="Camiseta Eintracht Frankfurt">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Frankfurt/AWAY (19).jpg" alt="Camiseta Eintracht Frankfurt">
+                <img src="Imagenes/BUNDESLIGA/FRANKFURT/AWAY (19).jpg" alt="Camiseta Eintracht Frankfurt">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -169,7 +169,7 @@
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/BUNDESLIGA/Leipzig/AWAY (20).jpg" alt="Camiseta RB Leipzig">
+                <img src="Imagenes/BUNDESLIGA/LEIPZIG/AWAY (20).jpg" alt="Camiseta RB Leipzig">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
