--- a/Hypermotion.html
+++ b/Hypermotion.html
@@ -81,12 +81,12 @@
         <h3>Cádiz</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Cádiz/HOME (12).jpg" alt="Camiseta Cádiz">
+                <img src="Imagenes/LIGA HYPERMOTION/CADIZ/HOME (12).jpg" alt="Camiseta Cádiz">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Cádiz/AWAY.jpeg" alt="Camiseta Cádiz">
+                <img src="Imagenes/LIGA HYPERMOTION/CADIZ/AWAY.jpeg" alt="Camiseta Cádiz">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -98,12 +98,12 @@
         <h3>Deportivo de la Coruña</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Deportivo de la Coruña/HOME.jpg" alt="Camiseta Deportivo de la Coruña">
+                <img src="Imagenes/LIGA HYPERMOTION/DEPORTIVO DE LA CORUNA/HOME.jpg" alt="Camiseta Deportivo de la Coruña">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Deportivo de la Coruña/AWAY.jpg" alt="Camiseta Deportivo de la Coruña">
+                <img src="Imagenes/LIGA HYPERMOTION/DEPORTIVO DE LA CORUNA/AWAY.jpg" alt="Camiseta Deportivo de la Coruña">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -115,7 +115,7 @@
         <h3>Granada</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Granada/HOME.jpg" alt="Camiseta Granada">
+                <img src="Imagenes/LIGA HYPERMOTION/GRANADA/HOME.jpg" alt="Camiseta Granada">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
@@ -137,17 +137,17 @@
         <h3>Málaga</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/MÁLAGA/HOME (11).jpg" alt="Camiseta Málaga">
+                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/HOME (11).jpg" alt="Camiseta Málaga">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Málaga/AWAY (25).jpg" alt="Camiseta Málaga">
+                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/AWAY (25).jpg" alt="Camiseta Málaga">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/MÁLAGA/THIRD.jpg" alt="Camiseta Málaga">
+                <img src="Imagenes/LIGA HYPERMOTION/MALAGA/THIRD.jpg" alt="Camiseta Málaga">
                 <h4>Camiseta Alternativa</h4>
                 <p>23€</p>
             </div>
@@ -159,12 +159,12 @@
         <h3>Racing de Santander</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Racing de Santander/HOME (13).jpg" alt="Camiseta Racing de Santander">
+                <img src="Imagenes/LIGA HYPERMOTION/RACING DE SANTANDER/HOME (13).jpg" alt="Camiseta Racing de Santander">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Racing de Santander/AWAY (26).jpg" alt="Camiseta Racing de Santander">
+                <img src="Imagenes/LIGA HYPERMOTION/RACING DE SANTANDER/AWAY (26).jpg" alt="Camiseta Racing de Santander">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
@@ -193,12 +193,12 @@
         <h3>Sporting de Gijón</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Sporting de Gijón/HOME.jpg" alt="Camiseta Sporting de Gijón">
+                <img src="Imagenes/LIGA HYPERMOTION/SPORTING DE GIJON/HOME.jpg" alt="Camiseta Sporting de Gijón">
                 <h4>Camiseta Local</h4>
                 <p>23€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA HYPERMOTION/Sporting de Gijón/AWAY.jpg" alt="Camiseta Sporting de Gijón">
+                <img src="Imagenes/LIGA HYPERMOTION/SPORTING DE GIJON/AWAY.jpg" alt="Camiseta Sporting de Gijón">
                 <h4>Camiseta Visitante</h4>
                 <p>23€</p>
             </div>
