--- a/Ligue_1.html
+++ b/Ligue_1.html
@@ -79,12 +79,12 @@
             <h3>Lille</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/Lille/HOME.jpeg" alt="Camiseta Lille">
+                    <img src="Imagenes/LIGUE 1/LILLE/HOME.jpeg" alt="Camiseta Lille">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/Lille/AWAY.jpg" alt="Camiseta Lille">
+                    <img src="Imagenes/LIGUE 1/LILLE/AWAY.jpg" alt="Camiseta Lille">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -96,12 +96,12 @@
             <h3>Lyon</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/Lyon/HOME (10).jpg" alt="Camiseta Lyon">
+                    <img src="Imagenes/LIGUE 1/LYON/HOME (10).jpg" alt="Camiseta Lyon">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/Lyon/AWAY.jpg" alt="Camiseta Lyon">
+                    <img src="Imagenes/LIGUE 1/LYON/AWAY.jpg" alt="Camiseta Lyon">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -113,12 +113,12 @@
             <h3>Olympique de Marsella</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/Marsella/HOME.jpg" alt="Camiseta Marsella">
+                    <img src="Imagenes/LIGUE 1/MARSELLA/HOME.jpg" alt="Camiseta Marsella">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/Marsella/AWAY.jpg" alt="Camiseta Marsella">
+                    <img src="Imagenes/LIGUE 1/MARSELLA/AWAY.jpg" alt="Camiseta Marsella">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -130,12 +130,12 @@
             <h3>AS Mónaco</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MÓNACO/HOME.jpg" alt="Camiseta Mónaco">
+                    <img src="Imagenes/LIGUE 1/MONACO/HOME.jpg" alt="Camiseta Mónaco">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/LIGUE 1/MÓNACO/AWAY.jpg" alt="Camiseta Mónaco">
+                    <img src="Imagenes/LIGUE 1/MONACO/AWAY.jpg" alt="Camiseta Mónaco">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
