--- a/MLS.html
+++ b/MLS.html
@@ -78,17 +78,17 @@
             <h3>Inter Miami</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/Inter Miami/HOME.jpeg" alt="Camiseta Inter Miami">
+                    <img src="Imagenes/MLS/INTER MIAMI/HOME.jpeg" alt="Camiseta Inter Miami">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/Inter Miami/AWAY.jpg" alt="Camiseta Inter Miami">
+                    <img src="Imagenes/MLS/INTER MIAMI/AWAY.jpg" alt="Camiseta Inter Miami">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/Inter Miami/THIRD.jpg" alt="Camiseta Inter Miami">
+                    <img src="Imagenes/MLS/INTER MIAMI/THIRD.jpg" alt="Camiseta Inter Miami">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -100,7 +100,7 @@
             <h3>Los Ángeles FC</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/LOS ÁNGELES FC/THIRD.jpg" alt="Camiseta Los Ángeles FC">
+                    <img src="Imagenes/MLS/LOS ANGELES FC/THIRD.jpg" alt="Camiseta Los Ángeles FC">
                     <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
@@ -124,12 +124,12 @@
             <h3>Orlando</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/MLS/Orlando/HOME.jpg" alt="Camiseta Orlando">
+                    <img src="Imagenes/MLS/ORLANDO/HOME.jpg" alt="Camiseta Orlando">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/MLS/Orlando/AWAY (24).jpg" alt="Camiseta Orlando">
+                    <img src="Imagenes/MLS/ORLANDO/AWAY (24).jpg" alt="Camiseta Orlando">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
