--- a/Saudí.html
+++ b/Saudí.html
@@ -77,13 +77,18 @@
         <h3>Al Hilal</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/Al Hilal/HOME.jpg" alt="Camiseta Al Hilal">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/HOME.jpg" alt="Camiseta Al Hilal">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/Al Hilal/AWAY.jpg" alt="Camiseta Al Hilal">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/AWAY.jpg" alt="Camiseta Al Hilal">
                 <h4>Camiseta Visitante</h4>
+                <p>FAN: 23€ - PLAYER: 25€</p>
+            </div>
+            <div class="producto">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL HILAL/THIRD.jpg" alt="Camiseta Al Hilal">
+                <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
         </div>
@@ -94,12 +99,12 @@
         <h3>Al Ittihad</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/Al Ittihad/HOME.jpg" alt="Camiseta Al Ittihad">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL ITTIHAD/HOME.jpg" alt="Camiseta Al Ittihad">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/LIGA PROFESIONAL SAUDI/Al Ittihad/AWAY.jpg" alt="Camiseta Al Ittihad">
+                <img src="Imagenes/LIGA PROFESIONAL SAUDI/AL ITTIHAD/AWAY.jpg" alt="Camiseta Al Ittihad">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
