--- a/Serie_A.html
+++ b/Serie_A.html
@@ -83,12 +83,12 @@
         <h3>Atalanta</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/Atalanta/HOME.jpg" alt="Camiseta Atalanta">
+                <img src="Imagenes/SERIE A/ATALANTA/HOME.jpg" alt="Camiseta Atalanta">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Atalanta/AWAY.jpg" alt="Camiseta Atalanta">
+                <img src="Imagenes/SERIE A/ATALANTA/AWAY.jpg" alt="Camiseta Atalanta">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -100,12 +100,12 @@
         <h3>Como</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/Como/HOME.jpg" alt="Camiseta Como">
+                <img src="Imagenes/SERIE A/COMO/HOME.jpg" alt="Camiseta Como">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Como/AWAY (13).jpg" alt="Camiseta Como">
+                <img src="Imagenes/SERIE A/COMO/AWAY (13).jpg" alt="Camiseta Como">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -161,12 +161,12 @@
         <h3>Lazio</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/Lazio/HOME.jpg" alt="Camiseta Lazio">
+                <img src="Imagenes/SERIE A/LAZIO/HOME.jpg" alt="Camiseta Lazio">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Lazio/AWAY.jpg" alt="Camiseta Lazio">
+                <img src="Imagenes/SERIE A/LAZIO/AWAY.jpg" alt="Camiseta Lazio">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -178,17 +178,17 @@
         <h3>Milan</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/Milan/HOME (9).jpg" alt="Camiseta Milan">
+                <img src="Imagenes/SERIE A/MILAN/HOME (9).jpg" alt="Camiseta Milan">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Milan/AWAY (10).jpg" alt="Camiseta Milan">
+                <img src="Imagenes/SERIE A/MILAN/AWAY (10).jpg" alt="Camiseta Milan">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Milan/THIRD.jpg" alt="Camiseta Milan">
+                <img src="Imagenes/SERIE A/MILAN/THIRD.jpg" alt="Camiseta Milan">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -200,17 +200,17 @@
         <h3>Napoli</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/Napoli/HOME.jpg" alt="Camiseta Napoli">
+                <img src="Imagenes/SERIE A/NAPOLI/HOME.jpg" alt="Camiseta Napoli">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Napoli/AWAY (12).jpg" alt="Camiseta Napoli">
+                <img src="Imagenes/SERIE A/NAPOLI/AWAY (12).jpg" alt="Camiseta Napoli">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Napoli/THIRD.jpg" alt="Camiseta Napoli">
+                <img src="Imagenes/SERIE A/NAPOLI/THIRD.jpg" alt="Camiseta Napoli">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -222,17 +222,17 @@
         <h3>Roma</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/Roma/HOME.jpg" alt="Camiseta Roma">
+                <img src="Imagenes/SERIE A/ROMA/HOME.jpg" alt="Camiseta Roma">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Roma/AWAY (14).jpg" alt="Camiseta Roma">
+                <img src="Imagenes/SERIE A/ROMA/AWAY (14).jpg" alt="Camiseta Roma">
                 <h4>Camiseta Visitante</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
             <div class="producto">
-                <img src="Imagenes/SERIE A/Roma/THIRD (9).jpg" alt="Camiseta Roma">
+                <img src="Imagenes/SERIE A/ROMA/THIRD (9).jpg" alt="Camiseta Roma">
                 <h4>Camiseta Alternativa</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
@@ -244,7 +244,7 @@
         <h3>Venezia</h3>
         <div class="productos">
             <div class="producto">
-                <img src="Imagenes/SERIE A/Venezia/HOME.jpg" alt="Camiseta Venezia">
+                <img src="Imagenes/SERIE A/VENEZIA/HOME.jpg" alt="Camiseta Venezia">
                 <h4>Camiseta Local</h4>
                 <p>FAN: 23€ - PLAYER: 25€</p>
             </div>
