--- a/eredivise.html
+++ b/eredivise.html
@@ -76,13 +76,18 @@
             <h3>Ajax</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/Ajax/HOME.jpg" alt="Camiseta Ajax">
+                    <img src="Imagenes/EREDIVISE/AJAX/HOME.jpg" alt="Camiseta Ajax">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/Ajax/AWAY (29).jpg" alt="Camiseta Ajax">
+                    <img src="Imagenes/EREDIVISE/AJAX/AWAY (29).jpg" alt="Camiseta Ajax">
                     <h4>Camiseta Visitante</h4>
+                    <p>FAN: 23€ - PLAYER: 25€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/EREDIVISE/AJAX/THIRD.jpg" alt="Camiseta Ajax">
+                    <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
             </div>
@@ -93,13 +98,18 @@
             <h3>Feyenoord</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/Feyenoord/HOME (17).jpg" alt="Camiseta Feyenoord">
+                    <img src="Imagenes/EREDIVISE/FEYENOORD/HOME (17).jpg" alt="Camiseta Feyenoord">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/EREDIVISE/Feyenoord/AWAY.jpg" alt="Camiseta Feyenoord">
+                    <img src="Imagenes/EREDIVISE/FEYENOORD/AWAY.jpg" alt="Camiseta Feyenoord">
                     <h4>Camiseta Visitante</h4>
+                    <p>FAN: 23€ - PLAYER: 25€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/EREDIVISE/FEYENOORD/THIRD (16).jpg" alt="Camiseta Feyenoord">
+                    <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
             </div>
