--- a/primeiraLiga.html
+++ b/primeiraLiga.html
@@ -78,13 +78,18 @@
             <h3>Benfica</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/Benfica/HOME (18).jpg" alt="Camiseta Benfica">
+                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/HOME (18).jpg" alt="Camiseta Benfica">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/Benfica/AWAY.jpeg" alt="Camiseta Benfica">
+                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/AWAY.jpeg" alt="Camiseta Benfica">
                     <h4>Camiseta Visitante</h4>
+                    <p>FAN: 23€ - PLAYER: 25€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/PRIMEIRA LIGA/BENFICA/THIRD (17).jpg" alt="Camiseta Benfica">
+                    <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
             </div>
@@ -95,13 +100,18 @@
             <h3>Oporto</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/Oporto/HOME.jpg" alt="Camiseta Oporto">
+                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/HOME.jpg" alt="Camiseta Oporto">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/Oporto/AWAY.jpeg" alt="Camiseta Oporto">
+                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/AWAY.jpeg" alt="Camiseta Oporto">
                     <h4>Camiseta Visitante</h4>
+                    <p>FAN: 23€ - PLAYER: 25€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/PRIMEIRA LIGA/OPORTO/THIRD.jpeg" alt="Camiseta Oporto">
+                    <h4>Camiseta Alternativa</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
             </div>
@@ -112,12 +122,12 @@
             <h3>Sporting de Lisboa</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/S.Lisboa/HOME.jpeg" alt="Camiseta Sporting de Lisboa">
+                    <img src="Imagenes/PRIMEIRA LIGA/S.LISBOA/HOME.jpeg" alt="Camiseta Sporting de Lisboa">
                     <h4>Camiseta Local</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/PRIMEIRA LIGA/S.Lisboa/AWAY.jpeg" alt="Camiseta Sporting de Lisboa">
+                    <img src="Imagenes/PRIMEIRA LIGA/S.LISBOA/AWAY.jpeg" alt="Camiseta Sporting de Lisboa">
                     <h4>Camiseta Visitante</h4>
                     <p>FAN: 23€ - PLAYER: 25€</p>
                 </div>
